// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration:: check your email should return error page when incorrect code entered more than 5 times 1`] = `
Object {
  "contentId": "1fef9388-34cd-4ea2-b899-a66b7327d2f7",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return error when csrf not present 1`] = `
Object {
  "contentId": undefined,
  "taxonomyLevel1": undefined,
  "taxonomyLevel2": undefined,
  "taxonomyLevel3": undefined,
  "taxonomyLevel4": undefined,
  "taxonomyLevel5": undefined,
}
`;

exports[`Integration:: check your email should return validation error when code entered contains letters 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return validation error when code is greater than 6 characters 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return validation error when code is less than 6 characters 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return validation error when code not entered 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return validation error when incorrect code entered 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration:: check your email should return verify email page 1`] = `
Object {
  "contentId": "054e1ea8-97a8-461a-a964-07345c80098e",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
